<resources>
    <string name="Billing_Cycle">Billing Cycle :</string>
    <string name="Click_here_to_go_Service_Dashboard">Click here to go Service Dashboard</string>
    <string name="Comfirm_password">Comfirm Password</string>
    <string name="DownloadFailed">Download Failed</string>
    <string name="Due_Date">Due Date :</string>
    <string name="English">Value</string>
    <string name="Enter_subject">Enter subject :</string>
    <string name="First_Time_Payment">First Time Payment :</string>
    <string name="Install_EPG">INSTALL EPG</string>
    <string name="N_A">N/A</string>
    <string name="Next_Due_Date">Next Due Date :</string>
    <string name="Payment_Method">Payment Method :</string>
    <string name="Pricing">Pricing :</string>
    <string name="Prodotto">Product:</string>
    <string name="Product">Product :</string>
    <string name="Recurring_Amount">Recurring Amount :</string>
    <string name="Registration_Date">Registration Date :</string>
    <string name="Remove">Remove</string>
    <string name="Romanian">Value</string>
    <string name="Service_Buy_Now">| Service Buy Now</string>
    <string name="Service_Information">| Service Information</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="TrackType_video">Video</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="a_cache">a-cache</string>
    <string name="accept">Accept</string>
    <string name="access_denied">Access Denied, <font color="#8B0000"><u>Click here</u></font> to allow the permission</string>
    <string name="accouncement">Announcements</string>
    <string name="account">ACCOUNT</string>
    <string name="account_active_connections">Active Connections:</string>
    <string name="account_created_at">Created At:</string>
    <string name="account_expiry_date">Expiry Date:</string>
    <string name="account_info">ACCOUNT INFO</string>
    <string name="account_info_small">Account Info</string>
    <string name="account_is_trial">Is Trial:</string>
    <string name="account_max_connections">Max Connections:</string>
    <string name="account_status">Account Status:</string>
    <string name="account_username">Username:</string>
    <string name="act_code">Activation Code</string>
    <string name="action_settings">Settings</string>
    <string name="activation_code">Activation Code</string>
    <string name="active">Active</string>
    <string name="active_channel">Loading…</string>
    <string name="add">Add</string>
    <string name="add_category_to_lock">Add Category to lock</string>
    <string name="add_epg">Add EPG</string>
    <string name="add_epg_xml">ADD EPG (.xml)</string>
    <string name="add_fav">: Added To Favourite</string>
    <string name="add_new_external_player">Add New Player</string>
    <string name="add_new_user">Add New User</string>
    <string name="add_player">ADD PLAYER</string>
    <string name="add_to_fav">Add To Favourite</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="add_to_live">Move to Live</string>
    <string name="add_to_movies">Move to Movies</string>
    <string name="add_to_series">Move to Series</string>
    <string name="add_user">Add User</string>
    <string name="added_external_player">Player added successfully</string>
    <string name="added_externalplayerSettings">Added External Players</string>
    <string name="added_to_live">Moved to Live</string>
    <string name="added_to_movies">Moved to Movies</string>
    <string name="added_to_series">Moved to Series</string>
    <string name="after_time_expried">Your Free Trial has been expired</string>
    <string name="alert">Alert!!</string>
    <string name="alert_mx_player">MX Player needs to be installed!</string>
    <string name="alert_player">needs to be installed!</string>
    <string name="alert_vlc_player">VLC Player needs to be installed!</string>
    <string name="all">ALL</string>
    <string name="all_channel">Show All Channels</string>
    <string name="all_movies_deleted_successfully">All Movies Deleted Successfully</string>
    <string name="all_series_deleted_successfully">All Episode Deleted Successfully</string>
    <string name="already_addedd">Already Added</string>
    <string name="already_exist_with_name">Already Exists with NAME:</string>
    <string name="already_registered_login">Already Registered?<u> Log in </u>here</string>
    <string name="and_portal">and Portal</string>
    <string name="announcement_message">Message</string>
    <string name="any_name">Any Name</string>
    <string name="app_id">A4FEBA39</string>
    <string name="app_name">Juice TV Smarters</string>
    <string name="app_update">Update</string>
    <string name="app_update_message">Please update the application to the latest version</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure_you_want_add_player">Are you sure you want to add this player ?</string>
    <string name="are_you_sure_you_want_reset_player">Are you sure you want to reset player to default?</string>
    <string name="are_you_sure_you_want_to_remove_palyer">Are you sure you want to remove external player ?</string>
    <string name="audio">Audio</string>
    <string name="audio_tracks">Audio Tracks</string>
    <string name="auto_epg">Auto-Update EPG</string>
    <string name="auto_statrt_bootup">AutoStart on Bootup</string>
    <string name="auto_update">Auto-Update Channels &amp; Movies daily</string>
    <string name="automation">Automation</string>
    <string name="available_update">Update Available</string>
    <string name="back_button">Back</string>
    <string name="back_to_exit">Tap back button in order to exit</string>
    <string name="billing_subscriptions">My Billing &amp; Subscriptions</string>
    <string name="bit_rate">bit_rate</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="browse">Browse</string>
    <string name="bt_save">SUBMIT</string>
    <string name="bt_submit">SAVE</string>
    <string name="bt_submit_login">SAVE &amp; LOGIN</string>
    <string name="btn_skip">"Don't ask again"</string>
    <string name="button_test">Begin Test</string>
    <string name="buy_now">Buy Now</string>
    <string name="can_not_play">can not play this video</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_invoices">Cancelled Invoices</string>
    <string name="cancel_small">Cancel</string>
    <string name="cast">Cast</string>
    <string name="cast1">Cast:</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_connecting_to_device">Connecting to %1$s</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">@android:string/ok</string>
    <string name="cast_invalid_stream_duration_text">--:--</string>
    <string name="cast_invalid_stream_position_text">--:--</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="choose_screen">Choose Multi-Screen Layout</string>
    <string name="choose_screen_layout">Multi-Screen Settings</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="epg_required_for_archive">For TV ARCHIVE, please keep EPG up to date depends on numbers of days your provider store</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="load_channels_vod">Refresh Channels, Movies and Series</string>
    <string name="load_tv_guide">Refresh TV Guide</string>
    <string name="media_route_menu_title">Play on…</string>
    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_view_details">Movie Info</string>
    <string name="multi_settings">Multi-Screen Settings</string>
    <string name="nav_play">Play</string>
    <string name="no_record_found">No Record Found</string>
    <string name="no_stream_found">No Channel Found</string>
    <string name="play_with_cast">Play With Cast</string>
    <string name="play_with_mx_player">Play with Mx Player</string>
    <string name="play_with_vlc_player">Play with VLC Player</string>
    <string name="recording_start">Start Recording</string>
    <string name="remove_from_favourite">Remove From Favourite</string>
    <string name="remove_from_live">Move to ALL</string>
    <string name="remove_from_movies">Move to ALL</string>
    <string name="remove_from_series">Move to ALL</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="select">Select</string>
    <string name="settings_small">Settings</string>
    <string name="show_popup">Show Multi-Screen Popup</string>
    <string name="sort_optn">SORT</string>
    <string name="view_Linear">List View</string>
    <string name="view_grid">Grid View</string>
</resources>