<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_play_with_vlc"
        android:title="@string/play_with_vlc_player"
        android:visible="false" />
    <item
        android:id="@+id/nav_play_with_mx"
        android:title="@string/play_with_mx_player"
        android:visible="false" />
    <item
        android:id="@+id/nav_add_to_fav"
        android:title="@string/add_to_favourite"
        android:visible="false" />
    <item
        android:id="@+id/nav_remove_from_fav"
        android:title="@string/remove_from_favourite"
        android:visible="false" />
    <item
        android:id="@+id/nav_recording"
        android:title="@string/recording_start" />
    <item
        android:id="@+id/play_with_cast"
        android:title="@string/play_with_cast"
        android:visible="false" />
</menu>