<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/media_route_menu_item"
        android:orderInCategory="101"
        android:title="@string/media_route_menu_title"
        app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_view"
        android:orderInCategory="102"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/empty"
        android:icon="@drawable/menu_dots"
        android:orderInCategory="103"
        android:title="inner"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_logout1"
                android:icon="@drawable/logout_icon_menu"
                android:orderInCategory="100"
                android:title="@string/menu_logout" />
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/home_icon_black"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/layout_view_linear"
                android:icon="@drawable/listview_menu"
                android:title="@string/view_Linear"
                android:visible="true" />
            <item
                android:id="@+id/layout_view_grid"
                android:icon="@drawable/gridview_menu"
                android:title="@string/view_grid"
                android:visible="true" />
            <item
                android:id="@+id/menu_load_channels_vod1"
                android:icon="@drawable/refresh_icon"
                android:title="@string/load_channels_vod" />
            <item
                android:id="@+id/menu_load_tv_guide1"
                android:icon="@drawable/guide_icon_menu"
                android:title="@string/load_tv_guide" />
            <item
                android:id="@+id/menu_sort"
                android:icon="@drawable/sort"
                android:title="@string/sort_optn" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings_icon_black"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_delete_all"
                android:icon="@drawable/ic_delete_black"
                android:title="@string/delete_all"
                android:visible="false" />
        </menu>
    </item>
</menu>