<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/tv_view_provider"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="linearView"
        android:visibility="invisible" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/tv_noStream"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60.0dip"
        android:fontFamily="@string/font_family_thin"
        android:gravity="center"
        android:text="@string/no_stream_found"
        android:textAlignment="center"
        android:textSize="30.0dip"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_no_record_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60.0dip"
        android:fontFamily="@string/font_family_thin"
        android:gravity="center"
        android:text="@string/no_record_found"
        android:textSize="30.0dip"
        android:visibility="gone" />
</RelativeLayout>